# lego

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Sky.fx  hostsvr.sh  ingame.txt  ios-cmake.sh  setupsvr.sh  todo.txt  uploadcache.bat
Import/: 4070.zmbx  MINAS TIRITH, CITY OF KINGS.zmbx  Porkins.zmbx  Steve and Creeper Set.zmbx  Trixie and Starlight.json  Trixie and Starlight.zmbx  scene.json  test.zmbx
core/: Application.cpp  Application.h  Audio.cpp  Audio.h  BrickMgr.cpp  BrickMgr.h  CMakeLists.txt  ConnectionLogic.cpp  ConnectionLogic.h  ConnectionWidget.cpp  ConnectionWidget.h  ENet.cpp  Enet.h  Engine.cpp  Engine.h  Frustum.cpp  GameController.cpp  GameController.h  Hud.cpp  Hud.h  LegoBrick.cpp  LegoBrick.h  LegoUI.cpp  LegoUI.h  Level.cpp  Level.h  Loc.h  MbxImport.cpp  MbxImport.h  Mesh.cpp  Mesh.h  Mongo.cpp  OctTile.cpp  OctTile.h  OctTileSelection.cpp  OctTileSelection.h  PartDefs.h  Physics.cpp  Physics.h  PlayerView.cpp  (+17 more)
core/gmtl/: AABox.h  AABoxOps.h  Intersection.h  Vec.h  VecOps.h
core/imgui/: varying.def.sc
core/imgui/dear-imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  imgui.h
core/shaders/: CMakeLists.txt  fs_blit.sc  fs_cubes.sc  fs_deferred.sc  fs_forwardshade.sc  fs_hud.sc  fs_ibl.sc  fs_pickbrick.sc  fs_targetcube.sc  uniforms.sh  varying.def.sc  vs_brick.sc  vs_brickpreview.sc  vs_connector.sc  vs_fullscreen.sc  vs_physicsdbg.sc
game/: Application.cpp  Application.h  Audio.cpp  Audio.h  BrickMgr.cpp  BrickMgr.h  CMakeLists.txt  ConnectionLogic.cpp  ConnectionWidget.cpp  Enet.h  Engine.cpp  Engine.h  GameController.h  Hud.cpp  LegoBrick.h  LegoUI.cpp  Level.cpp  LoresTile.cpp  LoresTile.h  MbxImport.cpp  Mongo.h  OctTile.cpp  OctTileSelection.cpp  Physics.cpp  PlayerView.cpp  SceneItem.cpp  SceneItem.h  TextureFile.cpp  TextureFile.h  UIControl.cpp  UIControl.h  World.cpp  World.h  indexed_map.h
game/imgui/: fs_ocornut_imgui.sc  makefile  vs_ocornut_imgui.sc
game/imgui/dear-imgui/: imgui.cpp
game/miniaudio/: miniaudio.h
game/shaders/: CMakeLists.txt  fs_bbox.sc  fs_brickpreview.sc  fs_deferred.sc  fs_gamecontroller.sc  fs_hud.sc  fs_pickconnector.sc  fs_sky.sc  shaderlib.sh  uniforms.sh  vs_gamecontroller.sc  vs_hud.sc
hdri/: irradiance.wimg  transmittance.wimg
ios/: CMakeLists.txt  MacOSXBundleInfo.plist.in  bgfx_utils.cpp  entry.cpp  entry.h  entry_p.h  input.cpp  input.h  main.mm
ldraw/: nomaterials.txt  partdesc.txt  parts.lst
ldraw/ldrconn/: 10352.cxml  10353.cxml  10354.cxml  11089.cxml  11215.cxml  11244.cxml  12939.cxml  13459.cxml  14417.cxml  14716.cxml  15332.cxml  15444.cxml  15573.cxml  16529.cxml  16577.cxml  17630.cxml  18649.cxml  2145.cxml  2357.cxml  2397.cxml  2421.cxml  2440.cxml  2446.cxml  2447.cxml  2462.cxml  2464.cxml  2479.cxml  2508.cxml  2540.cxml  2546.cxml  2547a.cxml  2547b.cxml  2548.cxml  2550.cxml  2555.cxml  2577.cxml  2654.cxml  272.cxml  2921.cxml  2922a.cxml  (+203 more)
ldraw/models/: note0801.txt  note0901.txt  note0902.txt  note0903.txt
ldraw/partmake/connectors/: 3815.json  3818.json  3819.json  3820.json  4733.json  973.json
ldrconn/: 10247.cxml  10350.cxml  10355.cxml  11090.cxml  11091.cxml  11202.cxml  11610.cxml  11618.cxml  11833.cxml  12825.cxml  12884.cxml  13665.cxml  13793.cxml  13965.cxml  14413.cxml  15070.cxml  15397.cxml  15680.cxml  15712.cxml  165.cxml  2038.cxml  2339.cxml  2345.cxml  2412a.cxml  2420.cxml  2432.cxml  2433.cxml  2441.cxml  2444.cxml  2453.cxml  2454.cxml  2463.cxml  2490.cxml  2526.cxml  2569.cxml  2714.cxml  2736.cxml  2793.cxml  2797.cxml  2900.cxml  (+242 more)
legosounds/: _readme_and_license.txt
leveldb/: CMakeLists.txt
leveldb/port/: port_win.cc
partmake/: App.xaml  App.xaml.cs  BSPTree.cs  Directory.Build.props  Directory.Build.targets  MainWindow.xaml  MainWindow.xaml.cs  Script.cs  ThreeD.xaml  ThreeD.xaml.cs  Topology.cs  VecDefs.cs  partmake.csproj  partmake.sln
partmake/AssetPrimitives/: AssetPrimitives.csproj  BinaryAssetSerializer.cs  BinaryExtensions.cs  ByteArraySerializer.cs  DefaultSerializers.cs  ProcessedModel.cs  ProcessedTexture.cs
partmake/AssetProcessor/: AssetProcessor.csproj  AssimpProcessor.cs  BinaryAssetProcessor.cs  ImageSharpProcessor.cs  KtxFileProcessor.cs  Program.cs
partmake/Common/: Model.cs  RawList.cs
partmake/EdgeIntersect/: ConvexDecomp.cpp  EdgeIntersect.cpp  EdgeIntersect.vcxproj  LDrawFuncs.cpp  MeshOrient.cpp  PolygonClipper.cpp  PolygonClipper.h  dllmain.cpp  ldrawloader.cpp  ldrawloader.hpp  vhacd.lib
partmake/EdgeIntersect/gmtl/: AABox.h  AABoxOps.h  Vec.h
partmake/PartMake/: AWS.cs  App.config  App.xaml  App.xaml.cs  BSPTree.cs  Blit-fragment.glsl  Blit-vertex.glsl  BulletSimulation.cs  CSharp-Mode.xshd  Colors.cs  ConnectorUtils.cs  Connectors.cs  Depth-fragment.glsl  Depth-vertex.glsl  DepthCubeMap.cs  DepthDownScale-fragment.glsl  DepthDownScale-vertex.glsl  DownScale.cs  EdgeIntersect.cs  Graphics.cs  LDrawDatFile.cs  LDrawFolders.cs  LayoutRenderControl.xaml.cs  LayoutVis.cs  LayoutWindow.xaml  LayoutWindow.xaml.cs  MCStructure.cs  MainWindow.xaml  MainWindow.xaml.cs  MbxImport.cs  PartInst.cs  PartMake.csproj  PartVis.cs  PolyLog.xaml  PolyLog.xaml.cs  PolygonIntersection.cs  Primitives.cs  RenderControl.xaml  RenderControl.xaml.cs  ScriptEditor.cs  (+13 more)
partmake/PartMake/Layout/: BulletSimulation.cs  Editor.cs  LayoutRenderControl.xaml  LayoutRenderControl.xaml.cs  (+11 more)
partmake/SampleBase/: ApplicationWindow.cs  Camera.cs  InputTracker.cs  KtxFile.cs  SampleApplication.cs  SampleBase.csproj  SamplePlatformType.cs  VeldridStartupWindow.cs
partmake/Scripts/: Editor.cs  Script.cs  TerrainGen.cs  Utils.cs  WorldScript.cs  config.json
partmake/VeldridBase/: ApplicationWindow.cs  Camera.cs  InputTracker.cs  KtxFile.cs  SampleApplication.cs  VeldridBase.csproj
partmake/v-hacd/: .gitignore  .gitmodules  README.md
rebrickable/: elements.csv  inventories.csv  inventory_minifigs.csv  inventory_sets.csv  minifigs.csv  part_categories.csv  part_relationships.csv  parts.csv  sets.csv
server/: CMakeLists.txt  server.cpp
shadercmp/: CMakeLists.txt  shadercmp.cpp  shadercmp.h
win/: CMakeLists.txt  map.cpp
(+33 files in other folders)
